tests/errors/default-gtype.vala
errordomain Foo {
	MANAM
}

void main () {
	assert (typeof (Foo) == typeof (GLib.Error));
}
